--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 
 \section{Project Abstract}
 
-I am working with Daniel Eisenstein and the Abacus N-body simulation team to build next-generation mock catalogs for DESI, Euclid, Rubin/LSST, and Simons Observatory. The AbacusAurora simulations will study growth of structure through RSD and weak lensing, galaxy population statistics, and cross-correlations with CMB datasets. To achieve these objectives, the simulations require (a) large volumes of 8~\textit{h}$^{-1}$~Gpc boxes that can contain light cones up to $z=2$, and (b) a novel galaxy assignment method via Massless Aggregating Particles (MAPs) that enables on-the-fly construction of merger trees. The former poses computational challenges due to the need for large-scale parallelization and efficient memory usage, which is central to the \textit{first part} of my project. The latter is crucial for more realistic modeling of assembly bias and galaxy clustering. This is key for the \textit{second part} of my proposal, which will focus on developing new density split statistics for the DESI Bright Galaxy Survey (BGS) sample~\citep{bgs_target_selection} to improve RSD measurements with multitracer analysis. First, to accomodate the enormous simulation volumes, I am implementing MPI parallelization to generate the kinematic initial conditions for over 35 trillion particles. The basis for this is the Zeldovich Approximation, which uses the primordial density power spectrum to compute the initial particle displacements and velocities. This past semester, I have been building this code infrastructure and testing it on the Aurora cluster. I now have a clear pipeline for the matrix generation, grid decomposition, and inter-node communication. The goal is to complete this work by the end of January 2026 to align with the AbacusAurora timeline. Second, I will make use of MAP-defined galaxy populations to design density split statistics for the currently underutilized BGS sample to improve RSD measurements. The dense BGS samples are ideal for multitracer analyses because they minimize shot noise~\citep{mcdonald2009}. However, color-based splits do not provide large enough bias differences for effective multitracer cosmic variance cancellation. To address this limitation, I will develop a density split method that tags each BGS galaxy by its local environment---specifically, counting faint photometric neighbors around each galaxy within $\sim$1~Mpc scales. This environment tagging creates density-based subsamples with larger bias separation than color splits alone. The MAP method is well-suited for this because MAP properties such as local DM density, velocity dispersion, formation history naturally encode environmental information in mock catalogs. 
+I am working with Daniel Eisenstein and the Abacus N-body simulation team to build next-generation mock catalogs for DESI, Euclid, Rubin/LSST, and Simons Observatory. The AbacusAurora simulations will study growth of structure through RSD and weak lensing, galaxy population statistics, and cross-correlations with CMB datasets. To achieve these objectives, the simulations require (a) large volumes of 8~\textit{h}$^{-1}$~Gpc boxes that can contain light cones up to $z=2$, and (b) a novel galaxy assignment method via Massless Aggregating Particles (MAPs) that enables on-the-fly construction of merger trees. The former poses computational challenges due to the need for large-scale parallelization and efficient memory usage, which is central to the \textit{first part} of my project. The latter is crucial for more realistic modeling of assembly bias and galaxy clustering. This is key for the \textit{second part} of my proposal, which will focus on developing new density split statistics for the DESI Bright Galaxy Survey (BGS) sample~\citep{bgs_target_selection} to improve RSD measurements with multi-tracer analysis. First, to accommodate the enormous volumes, I am implementing MPI parallelization to generate the kinematic initial conditions for over 35 trillion particles. The basis for this is the Zeldovich Approximation, which uses the primordial density power spectrum to compute the initial particle displacements and velocities. This past semester, I have been building this code infrastructure and testing it on the Aurora cluster. I now have a clear pipeline for the matrix generation, grid decomposition, and inter-node communication. The goal is to complete this work by the end of January 2026 to align with the AbacusAurora timeline. Second, I will make use of MAP-defined galaxy populations to design density split statistics for the currently underutilized BGS sample to improve RSD measurements. The dense BGS samples are ideal for multi-tracer analyses because they minimize shot noise. However, color-based splits do not provide large enough bias differences for effective multitracer cosmic variance cancellation~\citep{mcdonald2009}. To address this, I will develop a density split method that tags each BGS galaxy by its local environment---specifically, counting faint photometric neighbors around each galaxy within $\sim$1~Mpc. This environment tagging creates density-based subsamples with larger bias separation than color splits alone. The MAP method is well-suited for this because MAP properties such as local DM density, velocity dispersion, formation history naturally encode environmental information in mock catalogs. 
 
 %My first-year project focuses on two main contributions to this effort. 
 % First, to accomodate the enormous simulation volumes, I am implementing MPI parallelization to generate the kinematic initial conditions for over 35 trillion particles. The basis for this is the Zeldovich Approximation (ZA), which uses the primordial density power spectrum to compute the initial particle displacements and velocities needed to track the formation of cosmic web structures. Solving the Poisson equation for the AbacusAurora simulations requires performing Fourier transforms of $32768^3$ Hermitian matrices distributed across multiple compute nodes. This past semester, I have been building this code infrastructure and currently testing it on the Aurora cluster. I now have a clear pipeline for matrix generation, grid decomposition, and inter-node communication that can accommodate the memory constraints. The goal is to complete this work by the end of January 2026 to align with the AbacusAurora timeline. Short term next steps include scaling tests, testing edge cases of node and cell grid dimensions, and ensuring accurate reproduction of previous versions of the code---specifically verifying that simulations run at different resolutions match up to their common Fourier modes. Second, I will make use of MAP-defined galaxy populations to design density split statistics for the BGS sample to improve RSD measurements and study growth of structure. The DESI BGS contains over 10 million galaxies ($z < 0.6$), but currently only $\sim$13\% of the sample is utilized in clustering analyses due to modeling challenges with denser samples. However, dense galaxy samples are ideal for multitracer analyses because they minimize shot noise. While simple color-based splits (red vs.\ blue galaxies) can create different galaxy populations with different biases, they do not provide large enough bias differences for effective multitracer cosmic variance cancellation. To address this limitation, I will develop a density split methodology that tags each BGS galaxy by its local environment---specifically, counting faint photometric neighbors (from deep imaging surveys like LSST and Euclid, $<26$ mag) around each BGS spectroscopic galaxy within $\sim$1~Mpc scales. Galaxies with many neighbors are tagged as residing in high-density environments (clusters, groups), while those with few neighbors are tagged as low-density (field). This environment tagging creates density-based subsamples with larger bias separation than color splits alone. The MAP method is well-suited for this because MAP properties such as local DM density, velocity dispersion, formation history naturally encode environmental information in mock catalogs. 
